[build-system]
requires = [
    "setuptools",
    "wheel",
    "cython>=0.25",
    "numpy>2",
]
build-backend = "setuptools.build_meta"

[project]
name = "madmom"
version = "0.17.dev0"
license = {file = "LICENSE"}
description = 'Python audio signal processing library'
readme = "README.rst"
dependencies = [
    "cython>=3.0.12",
    "mido>=1.3.3",
    "numpy>=2.2.4",
    "scipy>=1.15.2",
    "torch>=2.6.0",
]
